# move-smith

./: .gitignore  Cargo.toml  Makefile  MoveSmith.default.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: afl_transactional.rs  hfuzz_v1v2.rs  opt_noopt.rs  random.rs  transactional.rs  v1v2.rs
ignore_errors/: .gitignore  compare_non_copy.move  mut_copy_mut.move  rec_type_inst.move  struct_copy.move  v1_ambiguous_var_usage.move  v1_cfgir_borrow.move  v1_copy_mut_ref.move  v1_dangling_ref.move  v1_equality_op_type_mismatch.move  v1_extraneous_acquires.move  v1_fallthrough.move  v2_cannot_push_borrowed.move  v2_copyloc_exists_borrow.move  v2_equality_op_type_mismatch.move  v2_stloc_type_mismatch.move  v2_stloc_unsafe_to_destroy.move
scripts/: coverage.sh  coverage_detail.py  coverage_graph.py  fuzz.sh  take_snapshot.sh
src/: ast.rs  codegen.rs  config.rs  env.rs  lib.rs  move_smith.rs  runner.rs  selection.rs  types.rs  utils.rs
src/cli/: check.rs  common.rs  compile.rs  fuzz.rs  generate.rs  main.rs  mod.rs  raw2move.rs  run.rs
src/codegen/: epilogue.move  mod.rs  prologue.move
src/execution/: mod.rs
src/execution/transactional/: executor.rs  input.rs  mod.rs  pool.rs  result.rs
