[package]
name = "move-smith"
version = "0.1.0"
description = "A Move source code level fuzzer."
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true }
clap = { workspace = true }
derive_builder = { workspace = true }
env_logger = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
move-compiler-v2 = { workspace = true }
move-model = { workspace = true }
move-package = { workspace = true }
move-transactional-test-runner = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[workspace.dependencies]
anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
clap = { version = "4.5.15", features = ["derive"] }
derive_builder = "0.20.0"
env_logger = "0.11.5"
glob = "0.3.1"
indicatif = { version = "0.15.0", features = ["rayon"] }
log = "0.4.22"
num-bigint = "0.4.6"
once_cell = "1.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
regex = "1.10.6"
serde = { version = "1.0.207", features = ["derive"] }
tempfile = "3.12.0"
tokio = "1.39.2"
toml = "0.8.19"
move-compiler-v2 = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "move-smith-patches", package = "move-compiler-v2" }
move-model = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "move-smith-patches", package = "move-model" }
move-package = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "move-smith-patches", package = "move-package" }
move-transactional-test-runner = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "move-smith-patches", package = "move-transactional-test-runner" }

[workspace]
members = ["fuzz"]

[lib]
name = "move_smith"
path = "src/lib.rs"

[[bin]]
name = "move-smith"
path = "src/cli/main.rs"
